YaCy-UI: fixed broken style for add bookmark dialog
git-svn-id: https://svn.berlios.de/svnroot/repos/yacy/trunk@5190 6c8d7289-2bf4-0310-a012-ef5d649a1542

--- a/htroot/yacy/ui/css/jquery.dialog.css
+++ b/htroot/yacy/ui/css/jquery.dialog.css
@@ -20,11 +20,11 @@
 	cursor: move;
 }
 
-.bmdialog .ui-dialog .ui-dialog-titlebar-ajax,
-.bmdialog.ui-dialog .ui-dialog-titlebar-ajax {
+.bmdialog .ui-dialog .ui-dialog-titlebar-close,
+.bmdialog.ui-dialog .ui-dialog-titlebar-close {
 	width: 16px;
 	height: 16px;
-	background: url(../loading.gif) no-repeat;
+	background: url(../img-2/cancel.png) no-repeat;
 	position:absolute;
 	top: 8px;
 	right: 7px;
